@@ -1,3 +1,8 @@
+2010-10-13  Emilio Meschi  <emilio.meschi@cern.ch>
+
+	* tag V01-09-06
+	* added simple web page to enable tests (go to stopping)
+
 2010-03-12  Emilio Meschi  <emilio.meschi@cern.ch>
 
 	* tag V01-09-05
